Project Build scripts

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
       
     - name: Push to new branch
       run: | 
+        git config --global user.email "smith.gajjar@gmail.com"
+        git config --global user.name "Smith Gajjar"
         git add .
         git commit -m "New Build"
         git push build
