--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       run : npm install
       
     - name : Build Project
-      run : tsc  
+      run : npm run build
       
     - name: Push to new branch
       run: | 
