--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
         git fetch
         git checkout --orphan build
         git rm -rf .
-        git add .
+        git add */**
         git commit -m "New Build"
         git push --set-upstream origin build
