--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,6 @@ jobs:
         git fetch
         git checkout --orphan build
         git rm -rf .
-        git add .
+        git add build
         git commit -m "New Build"
         git push --set-upstream origin build
