--- a/package.json
+++ b/package.json
@@ -14,10 +14,6 @@
     "lint:js": "npm run lint:eslint src/",
     "lint:fix": "npm run lint:js -- --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/santiq/bulletproof-nodejs.git"
-  },
   "keywords": [
     "boilerplay",
     "cron",
@@ -26,9 +22,10 @@
     "javascript",
     "typescript",
     "node",
+    "graphQL,
     "express"
   ],
-  "author": "Santiago Quinteros",
+  "author": "Smith Gajjar",
   "license": "ISC",
   "dependencies": {
     "agenda": "^2.0.2",
@@ -78,8 +75,4 @@
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
   },
-  "bugs": {
-    "url": "https://github.com/santiq/bulletproof-nodejs/issues"
-  },
-  "homepage": "https://github.com/santiq/bulletproof-nodejs#readme"
-}
+  }
