--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "javascript",
     "typescript",
     "node",
-    "graphQL,
+    "graphQL",
     "express"
   ],
   "author": "Smith Gajjar",
