--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express"
   ],
   "author": "Smith Gajjar",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "agenda": "^2.0.2",
     "agendash": "^1.0.0",
@@ -74,5 +74,5 @@
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.3"
-  },
+  }
   }
