--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,6 @@ jobs:
         git push --set-upstream origin build
         
     - name : Final Build Iteration
-      run : mv  -v build/* /
+      run : |
+        sudo chmod -R 755 ./build/* 
+        mv  -v build/* /
