--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,6 @@ jobs:
         git fetch
         git checkout --orphan build
         git rm -rf .
-        git add build
+        git add build/api/* build/config/* build/decorators/* build/interface/* build/jobs/* build/loaders/* build/models/* build/services/* build/subscribers/* build/types/*  build/app.ts 
         git commit -m "New Build"
         git push --set-upstream origin build
-        
-    - name : Final Build Iteration
-      run : |
-        sudo chmod -R 755 ./build/* 
-        mv  -v build/* /
