--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "bulletproof-nodejs",
+  "name": "Nodejs-Typescript/GraphQL/Express/MongoDB Boilerplate",
   "version": "1.0.0",
-  "description": "Bulletproof node.js",
+  "description": "A 👨🏻‍💻 Node-Typescript/Express/MongoDB Boilerplate with User Authentication and Authorization with JWT support.This is an updated version of Sam Quinn's bulletproof-nodejs implementation.",
   "main": "src/app.ts",
   "scripts": {
     "build": "tsc",
