update: pj name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Nodejs-Typescript/GraphQL/Express/MongoDB Boilerplate",
+  "name": "nodejs-typescript-boilerplate",
   "version": "1.0.0",
   "description": "A 👨🏻‍💻 Node-Typescript/Express/MongoDB Boilerplate with User Authentication and Authorization with JWT support.This is an updated version of Sam Quinn's bulletproof-nodejs implementation.",
   "main": "src/app.ts",
